Fix refresh button height on IE10/11
Bug: T173060

--- a/modules/dashboard/styles/ext.cx.suggestionlist.less
+++ b/modules/dashboard/styles/ext.cx.suggestionlist.less
@@ -71,6 +71,7 @@
 		> .oo-ui-iconElement-icon {
 			display: inline-block !important; /* stylelint-disable-line declaration-no-important */
 			position: static;
+			height: 1.5em; // Bug T173060
 			margin-right: 0.25em;
 		}
 
